--- a/client/style/index.css
+++ b/client/style/index.css
@@ -73,7 +73,7 @@ select {
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .item {
@@ -143,7 +143,19 @@ select {
     font-size: 30px;
     flex: 1 100%;
     margin-top: 0;
+    margin-bottom: 0;
     text-align: center;
+}
+
+.page-subheader {
+    background-color: #27aa80;
+    padding: 7px;
+    color: white;
+    font-size: 15px;
+    flex: 1 100%;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: left;
 }
 
 .modal {
