added log out functionality and some css styling

--- a/client/style/index.css
+++ b/client/style/index.css
@@ -209,7 +209,7 @@ select {
 .close-btn:hover {
     background-color: #DCDCDC;
 }
-.login-btn {
+.login-btn, .logout-btn{
     display: inline-block;
     font-family: Arial, sans-serif;
     font-size: 16px;
